--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,7 +25,7 @@
 <body>
     <header>
         <h1>Virginia Crash Data Visualizer</h1>
-        <p>Draw a quadrilateral (4 points) on the map to visualize crash data in that area</p>
+        <p>Draw a selection box on the map to visualize crash data in that area</p>
     </header>
     
     <main>
@@ -61,7 +61,6 @@
     </footer>
 
     <!-- Custom JavaScript -->
-    <script src="{{ url_for('static', filename='js/quadpoly.js') }}"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
 </html> 
