--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,6 +13,9 @@
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.3.0/mapbox-gl-draw.js"></script>
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.3.0/mapbox-gl-draw.css" type="text/css">
     
+    <!-- Font Awesome for GitHub icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
     <!-- Turf.js -->
     <script src="https://unpkg.com/@turf/turf@6/turf.min.js"></script>
     
@@ -28,6 +31,9 @@
 </head>
 <body>
     <header>
+        <a href="https://github.com/your-username/virginia-crash-visualizer" target="_blank" class="github-link" title="View on GitHub">
+            <i class="fab fa-github"></i>
+        </a>
         <h1>Virginia Transportation Corridor Tool</h1>
         <div class="header-description">
             <p>Draw a corridor to analyze pedestrian trend data</p>
